# mcp-datos-uruguay

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-lint.yml
src/mcp_ckan_datos_uruguay/: __init__.py
src/mcp_ckan_datos_uruguay/datasets/compras-ocds/ocds-2023/: l-10-2023.json
src/mcp_ckan_datos_uruguay/datasets/compras_ocds/: __init__.py  consultas.py  load_db.py
src/mcp_ckan_datos_uruguay/datasets/delitos_sexuales/: README.md  consultas.py  departamentos_delitos_sexuales.yaml  eventos_delitos_sexuales.yaml  tipos_delitos_sexuales.yaml  total_eventos_delitos_sexuales.yaml  total_victimas_delitos_sexuales.yaml  victimas_delitos_sexuales.yaml
src/mcp_ckan_datos_uruguay/datasets/delitos_sexuales/data/: REAME.md  eventos-de-delitos-sexuales-2018-2024.csv  metadatos-eventos-de-delitos-sexuales-2018-2024.json  victimas-de-delitos-sexuales-2018-2024.csv
